2013-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Allow subdir-objects.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop m-tx.lua,
	now in ../../texk/texlive/linked_scripts/m-tx.

2012-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop libp2c.a (multiple definitions).

2012-07-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	This directory utils/mtx/ renamed into utils/m-tx/.
	* mtx.test: Renamed into m-tx.test.
	* Makefile.am, configure.ac, ac/withenable.ac: Adapted.

2012-05-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Add '-DNO_DECLARE_MALLOC' to avoid
	a possibly conflicting redeclaration of malloc().
	From Vladimir Volovich <vvv@vsu.ru>.

2012-04-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt mtx-0.60d to the TeX Live build system.

	* configure.ac: Do not use AC_CONFIG_HEADERS because config.h
	is not included by the sources.
	Do not use AC_FUNC_MALLOC because this might redefine malloc()
	as rpl_malloc().

Copyright (C) 2012 Peter Breitenlohner <tex-live@tug.org>
You may freely use, modify and/or distribute this file.